начал делать шапку

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <!--Статью верстать тут-->
+<header>
+    <img src="responsive-design/E8E9A56B-53B7-494E-BE52-747EE607EC62/0A444DCB-E33A-45DC-B3CE-3D329BD766F6@3x.png" alt="лого html+css">
+    <nav>
+        <ul>
+            <li>Обо мне</li>
+            <li>Проекты</li>
+            <li>Портфолио</li>
+            <li class="selected">Блог</li>
+            <li>Контакты</li>
+        </ul>
+    </nav>
+</header>
 <article>
     <h1>Замыкания в JavaScript для начинающих</h1>
 
