--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 <!--Статью верстать тут-->
 <header>
-    <img src="responsive-design/E8E9A56B-53B7-494E-BE52-747EE607EC62/0A444DCB-E33A-45DC-B3CE-3D329BD766F6@3x.png" alt="лого html+css">
+    <img src="responsive-design/E8E9A56B-53B7-494E-BE52-747EE607EC62/0A444DCB-E33A-45DC-B3CE-3D329BD766F6@3x.png"
+         alt="лого html+css">
     <nav>
-        <ul>
+        <ul class="shapka">
             <li>Обо мне</li>
             <li>Проекты</li>
             <li>Портфолио</li>
@@ -22,37 +23,60 @@
 <article>
     <h1>Замыкания в JavaScript для начинающих</h1>
 
-    <p>Замыкания — это одна из фундаментальных концепций JavaScript, вызывающая сложности у многих новичков, знать и
-        понимать которую должен каждый JS-программист. Хорошо разобравшись с замыканиями, вы сможете писать более
-        качественный, эффективный и чистый код. А это, в свою очередь, будет способствовать вашему профессиональному
-        росту.</p>
+    <div class="text">
+        <p>Замыкания — это одна из фундаментальных концепций JavaScript, вызывающая сложности у многих новичков, знать и
+            понимать которую должен каждый JS-программист. Хорошо разобравшись с замыканиями, вы сможете писать более
+            качественный, эффективный и чистый код. А это, в свою очередь, будет способствовать вашему профессиональному
+            росту.</p>
 
-    <br>
+        <p>Материал, перевод которого мы публикуем сегодня, посвящён рассказу о внутренних механизмах замыканий и о том,
+            как
+            они работают в JavaScript-программах.</p>
+    </div>
 
-    <p>Материал, перевод которого мы публикуем сегодня, посвящён рассказу о внутренних механизмах замыканий и о том, как
-        они работают в JavaScript-программах.</p>
 
+    <h2>Что такое замыкание?</h2>
+
+    <div class="text">
+        <p>Замыкание — это функция, у которой есть доступ к области видимости, сформированной внешней по отношению к ней
+            функции даже после того, как эта внешняя функция завершила работу. Это значит, что в замыкании могут
+            храниться переменные, объявленные во внешней функции и переданные ей аргументы. Прежде чем мы перейдём,
+            собственно, к замыканиям, разберёмся с понятием «лексическое окружение».</p>
+    </div>
 
     <h2>Что такое лексическое окружение?</h2>
 
-    <p>Понятие «лексическое окружение» или «статическое окружение» в JavaScript относится к возможности доступа к
-        переменным, функциям и объектам на основе их физического расположения в исходном коде. Рассмотрим пример:</p>
+    <div class="text">
+        <p>Понятие «лексическое окружение» или «статическое окружение» в JavaScript относится к возможности доступа к
+            переменным, функциям и объектам на основе их физического расположения в исходном коде. Рассмотрим
+            пример:</p>
 
-    <img src="/article-design/2744EFD6-B878-4DCB-B0D5-526F1B233733/CA501510-E978-4377-9076-8F392B899C1B@0.5x.png"
-         alt="Лексическое окружение js">
+        <img src="/article-design/2744EFD6-B878-4DCB-B0D5-526F1B233733/CA501510-E978-4377-9076-8F392B899C1B@1x.png"
+             alt="Лексическое окружение js">
 
-    <p>Здесь у функции inner() есть доступ к переменным, объявленным в её собственной области видимости, в области
-        видимости функции outer() и в глобальной области видимости. Функция outer() имеет доступ к переменным,
-        объявленным в её собственной области видимости и в глобальной области видимости.</p>
-    <br>
-    <p>Цепочка областей видимости вышеприведённого кода будет выглядеть так:</p>
+        <p>Здесь у функции <span class="code">inner()</span> есть доступ к переменным, объявленным в её собственной
+            области
+            видимости, в области
+            видимости функции <span class="code">outer()</span> и в глобальной области видимости. Функция <span
+                    class="code">outer()</span> имеет
+            доступ к переменным,
+            объявленным в её собственной области видимости и в глобальной области видимости.</p>
 
-    <img src="/article-design/2744EFD6-B878-4DCB-B0D5-526F1B233733/848B0BFD-C857-4F1E-93BF-3822E0A81A7E@0.5x.png"
+        <p>Цепочка областей видимости вышеприведённого кода будет выглядеть так:</p>
+    </div>
+
+    <img src="/article-design/2744EFD6-B878-4DCB-B0D5-526F1B233733/848B0BFD-C857-4F1E-93BF-3822E0A81A7E@1x.png"
          alt="Область видимости js">
 
-    <p>Обратите внимание на то, что функция inner() окружена лексическим окружением функции outer(), которая, в свою
-        очередь, окружена глобальной областью видимости. Именно поэтому функция inner() может получить доступ к
-        переменным, объявленным в функции outer() и в глобальной области видимости.</p>
+    <div class="text">
+        <p>Обратите внимание на то, что функция <span class="code">inner()</span> окружена лексическим окружением
+            функции
+            <span class="code">outer()</span>, которая, в свою
+            очередь, окружена глобальной областью видимости. Именно поэтому функция <span class="code">inner()</span>
+            может
+            получить доступ к
+            переменным, объявленным в функции <span class="code">outer()</span> и в глобальной области видимости.</p>
+    </div>
 </article>
 
 </body>
