--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
 <!--Статью верстать тут-->
 <header>
-    <img src="responsive-design/E8E9A56B-53B7-494E-BE52-747EE607EC62/0A444DCB-E33A-45DC-B3CE-3D329BD766F6@3x.png"
+    <img class="header-item img-logo"
+         src="responsive-design/E8E9A56B-53B7-494E-BE52-747EE607EC62/0A444DCB-E33A-45DC-B3CE-3D329BD766F6@3x.png"
          alt="лого html+css">
-    <nav>
-        <ul class="shapka">
-            <li>Обо мне</li>
-            <li>Проекты</li>
-            <li>Портфолио</li>
-            <li class="selected">Блог</li>
-            <li>Контакты</li>
+    <nav class="header-item nav">
+        <ul>
+            <li class="nav-item"><a>Обо мне</a></li>
+            <li class="nav-item"><a>Проекты</a></li>
+            <li class="nav-item"><a>Портфолио</a></li>
+            <li class="nav-item selected"><a>Блог</a></li>
+            <li class="nav-item"><a>Контакты</a></li>
         </ul>
     </nav>
 </header>
